trying to add some force layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <meta charset="utf-8">
 <head>
 <title>Executable Knowledge</title>
+<link rel="stylesheet" type="text/css" href="kr.css">
+<script src="d3/d3.min.js"></script>
 <script src="LayeredGraph.js"></script>
+<script src="DynamicGraph.js"></script>
 </head>
 <body>
 </body>
