go to graphical (start)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="d3/d3.min.js"></script>
 <script src="LayeredGraph.js"></script>
 <script src="DynamicGraph.js"></script>
+<script src="GraphicGraph.js"></script>
 </head>
 <body>
 </body>
