added label,context,merge to graph and working on svg

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<html>
 <head>
 <title>Executable Knowledge</title>
 <link rel="stylesheet" type="text/css" href="kr.css">
@@ -9,4 +10,19 @@
 <script src="GraphicGraph.js"></script>
 </head>
 <body>
+<div id="main-container">
+      <div id="menu">
+	<Form name="menu_f">
+	  <input type="button" name="import" value="Import Data">
+	  <input type="button" name="export" value="Export Data">
+	  <input type="button" name="nugget" value="Add Nugget">
+	  <input type="button" name="update" value="Update">
+	  <input type="button" name="lcg" value="LCG">
+	  <input type="button" name="kappa" value="To Kappa">
+	</form>
+      </div>
+      <div id="graph">
+      </div>
+    </div>
 </body>
+</html>
