--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
 <html>
 <head>
 <title>Executable Knowledge</title>
+<meta charset="utf-8">
+<meta name="Executable Knowledge" content="This tool is a graphical interface for knowledge representation and edition">
+<meta name="keywords" content="Kappa,knowledge representation">
+<meta name="author" content="Adrien Basso-Blandin">
 <link rel="stylesheet" type="text/css" href="kr.css">
 <script src="d3/d3.min.js"></script>
 <script src="LayeredGraph.js"></script>
 <script src="DynamicGraph.js"></script>
 <script src="GraphicGraph.js"></script>
+<script src="GuiGraph.js"></script>
 </head> 
 <body>
 <div id="main-container">
