--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <script src="LayeredGraph.js"></script>
 <script src="DynamicGraph.js"></script>
 <script src="GraphicGraph.js"></script>
-<script src="GuiGraph.js"></script>
+
 </head> 
 <body>
 <div id="main-container">
       <div id="menu">
 	<Form name="menu_f">
+	  <input type="file" id="import_f" value="data.json">
 	  <input type="button" name="import" value="Import Data">
 	  <input type="button" name="export" value="Export Data">
+	  <input type="button" name="kr" value="wiew Kr">
+	  <input type="button" name="edit" value="Edit Kr">
 	  <input type="button" name="nugget" value="Add Nugget">
 	  <input type="button" name="update" value="Update">
 	  <input type="button" name="lcg" value="LCG">
 	  <input type="button" name="kappa" value="To Kappa">
+	  <input type="button" name="s_kappa" value="Save Kappa">
 	</form>
       </div>
       <div id="graph">
