--- a/kr1_0.html
+++ b/kr1_0.html
@@ -234,21 +234,21 @@ return res;
 }
 function toGraph(){
 	for(var i=0;i<agents.length;i++){
-		nodes.push({"id":agents[i].name,"type":agents[i].class[1],"x":agents[i].cx,"y":agents[i].cy,"path":[],"father":null,"values":[]});
+		nodes.push({"id":agents[i].name,"type":agents[i].class[1],"x":agents[i].cx,"y":agents[i].cy,"path":[],"father":null,"values":[],"label":agents[i].label});
 	}for(var i=0;i<regions.length;i++){
-		nodes.push({"id":regions[i].name,"type":regions[i].class[1],"x":0,"y":0,"path":[regions[i].ag_name],"father":regions[i].ag_name,"values":[]});
+		nodes.push({"id":regions[i].name,"type":regions[i].class[1],"x":0,"y":0,"path":[regions[i].ag_name],"father":regions[i].ag_name,"values":[],"label":region[i].label});
 		links.push({"source": findNode(regions[i].ag_name), "target": findNode(regions[i].name)});
 	}for(var i=0;i<key_rs.length;i++){
-		nodes.push({"id":key_rs[i].name,"type":key_rs[i].class[1],"x":0,"y":0,"path":[key_rs[i].ag_name],"father":key_rs[i].ag_name,"values":[]});
+		nodes.push({"id":key_rs[i].name,"type":key_rs[i].class[1],"x":0,"y":0,"path":[key_rs[i].ag_name],"father":key_rs[i].ag_name,"values":[],"label":key_rs[i].label});
 		links.push({"source": findNode(key_rs[i].ag_name), "target": findNode(key_rs[i].name)});
 	}for(var i=0;i<attributes.length;i++){
-		nodes.push({"id":attributes[i].name,"type":attributes[i].class[1],"x":0,"y":0,"path":truncate(attributes[i].dest_path,1),"father":attributes[i].dest_path[attributes[i].dest_path.length-1],"values":attributes[i].values});
+		nodes.push({"id":attributes[i].name,"type":attributes[i].class[1],"x":0,"y":0,"path":truncate(attributes[i].dest_path,1),"father":attributes[i].dest_path[attributes[i].dest_path.length-1],"values":attributes[i].values,"label":attributes[i].label});
 		links.push({"source": findNode(attributes[i].dest_path[attributes[i].dest_path.length-1]), "target": findNode(attributes[i].name)});
 	}for(var i=0;i<flags.length;i++){
-		nodes.push({"id":flags[i].name,"type":flags[i].class[1],"x":0,"y":0,"path":truncate(flags[i].dest_path,1),"father":flags[i].dest_path[flags[i].dest_path.length-1],"values":flags[i].values});
+		nodes.push({"id":flags[i].name,"type":flags[i].class[1],"x":0,"y":0,"path":truncate(flags[i].dest_path,1),"father":flags[i].dest_path[flags[i].dest_path.length-1],"values":flags[i].values,,"label":flags[i].label});
 		links.push({"source": findNode(flags[i].dest_path[flags[i].dest_path.length-1]), "target": findNode(flags[i].name)});
 	}for(var i=0;i<actions.length;i++){
-		nodes.push({"id":actions[i].name,"type":actions[i].class[1],"x":0,"y":0,"path":[],"father":null,"values":[]});
+		nodes.push({"id":actions[i].name,"type":actions[i].class[1],"x":0,"y":0,"path":[],"father":null,"values":[],"label":actions[i].label});
 	}for(var i=0;i<edges.length;i++){
 		var tmp_src;
 		var tmp_tar;
@@ -358,7 +358,7 @@ var update = function(){
 		.attr("x", 0)
 		.attr("dy", ".35em")
 		.attr("text-anchor", "middle")
-		.text(function(d) { return d.id; });
+		.text(function(d) { return d.label; });
 	node.exit().remove();
 	force.on("tick",tick);
 	force.start();
