--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 <body>
 <div id="main-container">
       <div id="menu">
-	<Form name="menu_f">
+	<Form id="menu_f">
 	  <input type="file" id="import_f" value="data.json">
-	  <input type="button" name="import" value="Import Data">
-	  <input type="button" name="export" value="Export Data">
-	  <input type="button" name="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
-	  <input type="button" name="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
-	  <input type="button" name="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
-	  <input type="button" name="update" value="Update">
-	  <input type="button" name="lcg" value="LCG">
-	  <input type="button" name="kappa" value="To Kappa">
-	  <input type="button" name="s_kappa" value="Save Kappa">
-	  <input type="button" name="undo" value="Undo" onclick="gGraph.unStack()">
-	  	
+	  <input type="button" id="import" value="Import Data">
+	  <input type="button" id="export" value="Export Data">
+	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
+	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
+	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
+	  <input type="button" id="update" value="Update" onclick="gGraph.clearStack()">
+	  <input type="button" id="lcg" value="LCG">
+	  <input type="button" id="kappa" value="To Kappa">
+	  <input type="button" id="s_kappa" value="Save Kappa">
+	  <input type="button" id="undo" value="Undo" onclick="gGraph.unStack()">
+	  <input type="button" id="replay" value="Reset Graph position" onclick="gGraph.wakeUp()">
 	</form>
       </div>
       <div id="graph">
