--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script src="LayeredGraph.js"></script>
 <script src="DynamicGraph.js"></script>
 <script src="GraphicGraph.js"></script>
-
+ 
 
 </head> 
 <body>
@@ -26,7 +26,7 @@
 	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
 	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
 	  <input type="button" id="update" value="Update" onclick="gGraph.clearStack()">
-	  <input type="button" id="lcg" value="LCG">
+	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')">
 	  <input type="button" id="kappa" value="To Kappa">
 	  <input type="button" id="s_kappa" value="Save Kappa">
 	  <input type="button" id="undo" value="Undo" onclick="gGraph.unStack()">
