LCG regenerated only if needed !

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
 	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
 	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
-	  <input type="button" id="update" value="Update" onclick="gGraph.clearStack()">
+	  <input type="button" id="update" value="Update" onclick="gGraph.save()">
 	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')">
 	  <input type="button" id="kappa" value="To Kappa">
 	  <input type="button" id="s_kappa" value="Save Kappa">
