--- a/index.html
+++ b/index.html
@@ -12,6 +12,69 @@
 <script src="LayeredGraph.js"></script>
 <script src="DynamicGraph.js"></script>
 <script src="GraphicGraph.js"></script>
+<script src="jSonFormatter.js"></script>
+<script>
+var gGraph = null; 
+var jsonformater= null;
+window.onload = function () { 
+	gGraph = new GraphicGraph('graph');
+	gGraph.init();
+	gGraph.addNode(["agent"],["ag1","othername","thirdname"],[]);
+	gGraph.addNode(["agent"],["ag2"],[]);
+	gGraph.addNode(["agent"],["ag3"],[]);
+	gGraph.addNode(["region"],["reg1"],["n0"]);
+	gGraph.addNode(["region"],["reg2"],["n1"]);
+	gGraph.addNode(["key_res"],["kr1"],["n0"]);
+	gGraph.addNode(["key_res"],["kr2"],["n1"]);
+	gGraph.addNode(["attribute"],["att2"],["n0"]);
+	gGraph.addNode(["attribute"],["att2"],["n1","n4"]);
+	gGraph.addNode(["flag"],["fl1"],["n0"]);
+	gGraph.addNode(["flag"],["fl2"],["n1","n6"]);
+	gGraph.addNode(["flag"],["fl3"],["n1"]);
+	gGraph.addNode(["flag"],["fl4"],["n2"]);
+	gGraph.addNode(["action","bnd"],["bnd1"],[]);
+	gGraph.addNode(["action","brk"],["brk1"],[]);
+	gGraph.addNode(["action","binder","left"],[],["n13"]);
+	gGraph.addNode(["action","binder","right"],[],["n13"]);
+	gGraph.addNode(["action","binder","left"],[],["n14"]);
+	gGraph.addNode(["action","binder","right"],[],["n14"]);
+	gGraph.addEdge("n3","n15");
+	gGraph.addEdge("n4","n16");
+	gGraph.addEdge("n2","n17");
+	gGraph.addEdge("n4","n18");
+	gGraph.addInfluence("n13","n14","positive");
+	gGraph.addCtx("n3",["n1","n4"]);
+	gGraph.addCtx("n13",["n3","n4"]);
+	gGraph.addCtx("n14",["n2","n4"]);
+	gGraph.wakeUp();
+	//gGraph.mergeNode("n0","n1");
+	//console.log(gGraph.findByName(["brk1"],["action","bnd"],[]));
+	
+};
+
+var loadJson = function(){
+	var data="data.json"; 
+	var yep=true;
+	var file=document.getElementById("import_f").value
+	if(typeof(file)!="undefined" && file !=null && file !="") data=file;
+	else alert("No input file. Default datas loaded !");
+	if(gGraph==null || !confirm('Merge with the existing graph ?')){
+		yep=confirm("confirm the removal of the old graph ?");
+		if(yep){
+			d3.select("#graph").selectAll('*').remove();
+			delete(gGraph);
+			gGraph = new GraphicGraph('graph');
+			gGraph.init();	
+			jsonformater=new jSonFormatter(gGraph);
+		}else return;
+	}if(yep){
+		if(jsonformater==null)
+			jsonformater=new jSonFormatter(gGraph);
+		jsonformater.init(data);
+	}
+
+};
+</script>
  
 
 </head> 
@@ -20,7 +83,7 @@
       <div id="menu">
 	<Form id="menu_f">
 	  <input type="file" id="import_f" value="data.json">
-	  <input type="button" id="import" value="Import Data">
+	  <input type="button" id="import" value="Import Data" onclick="loadJson()">
 	  <input type="button" id="export" value="Export Data">
 	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
 	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
