--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ var loadJson = function(){
 	}if(yep){
 		if(jsonformater==null)
 			jsonformater=new jSonFormatter(gGraph);
+		console.log("importing datas");
 		jsonformater.init(data);
 	}
-
 };
 </script>
  
