--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var jsonformater= null;
 window.onload = function () { 
 	gGraph = new GraphicGraph('graph');
 	gGraph.init();
-	gGraph.addNode(["agent"],["ag1","othername","thirdname"],[]);
+	gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
 	gGraph.addNode(["agent"],["ag2"],[]);
 	gGraph.addNode(["agent"],["ag3"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
@@ -53,7 +53,7 @@ window.onload = function () {
 };
 
 var loadJson = function(){
-	var data="data.json"; 
+	var data="../data.json"; 
 	var yep=true;
 	var file=document.getElementById("import_f").value
 	if(typeof(file)!="undefined" && file !=null && file !="") data=file;
