--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ window.onload = function () {
 };
 
 var loadJson = function(){
-	var data="../data.json"; 
+	var data="data.json"; 
 	var yep=true;
 	var file=document.getElementById("import_f").value
 	if(typeof(file)!="undefined" && file !=null && file !="") data=file;
