--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var loadJson = function(){
 	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
 	  <input type="button" id="update" value="Update" onclick="gGraph.save()">
 	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')">
-	  <input type="button" id="kappa" value="To Kappa">
+	  <input type="button" id="kappa" value="To Kappa" onclick="gGraph.setState('kappa_view')">
 	  <input type="button" id="undo" value="Undo" onclick="gGraph.unStack()">
 	  <input type="button" id="replay" value="Reset Graph position" onclick="gGraph.wakeUp()">
 	</form>
