action going t work

--- a/index.html
+++ b/index.html
@@ -20,32 +20,20 @@ window.onload = function () {
 	gGraph = new GraphicGraph('graph');
 	gGraph.init();
 	gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
-	gGraph.addNode(["agent"],["ag2"],[]);
-	gGraph.addNode(["agent"],["ag3"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
-	gGraph.addNode(["region"],["reg2"],["n1"]);
-	gGraph.addNode(["key_res"],["kr1"],["n0"]);
-	gGraph.addNode(["key_res"],["kr2"],["n1"]);
-	gGraph.addNode(["attribute"],["att2"],["n0"]);
-	gGraph.addNode(["attribute"],["att2"],["n1","n4"]);
-	gGraph.addNode(["flag"],["fl1"],["n0"]);
-	gGraph.addNode(["flag"],["fl2"],["n1","n6"]);
-	gGraph.addNode(["flag"],["fl3"],["n1"]);
-	gGraph.addNode(["flag"],["fl4"],["n2"]);
+	gGraph.addNode(["region"],["reg2"],["n0"]);
 	gGraph.addNode(["action","bnd"],["bnd1"],[]);
-	gGraph.addNode(["action","brk"],["brk1"],[]);
-	gGraph.addNode(["action","binder","left"],[],["n13"]);
-	gGraph.addNode(["action","binder","right"],[],["n13"]);
-	gGraph.addNode(["action","binder","left"],[],["n14"]);
-	gGraph.addNode(["action","binder","right"],[],["n14"]);
-	gGraph.addEdge("n3","n15");
-	gGraph.addEdge("n4","n16");
-	gGraph.addEdge("n2","n17");
-	gGraph.addEdge("n4","n18");
-	gGraph.addInfluence("n13","n14","positive");
-	gGraph.addCtx("n7",["n1","n4"]);
-	gGraph.addCtx("n13",["n3","n4"]);
-	gGraph.addCtx("n14",["n2","n4"]);
+	gGraph.addNode(["action","bnd"],["bnd2"],[]);
+	gGraph.addNode(["action","binder","left"],[],["n3"]);
+	gGraph.addNode(["action","binder","right"],[],["n3"]);
+	gGraph.addNode(["action","binder","left"],[],["n4"]);
+	gGraph.addNode(["action","binder","right"],[],["n4"]);
+	gGraph.addEdge("n1","n5");
+	gGraph.addEdge("n1","n6");
+	gGraph.addEdge("n2","n7");
+	gGraph.addEdge("n2","n8");
+	gGraph.addCtx("n3",["n1"]);
+	gGraph.addCtx("n4",["n2","n3"]);
 	gGraph.wakeUp();
 	//gGraph.mergeNode("n0","n1");
 	//console.log(gGraph.findByName(["brk1"],["action","bnd"],[]));
