--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="Executable Knowledge" content="This tool is a graphical interface for knowledge representation and edition">
 <meta name="keywords" content="Kappa,knowledge representation">
 <meta name="author" content="Adrien Basso-Blandin">
+<meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" type="text/css" href="kr.css">
 <script src="d3/d3.min.js"></script>
 <script src="d3/d3-context-menu.js"></script>
@@ -17,8 +18,12 @@
 var gGraph = null; 
 var jsonformater= null;
 window.onload = function () { 
+	var dropZone = document.getElementById('graph');
+    dropZone.addEventListener('dragover', handleDragOver, false);
+    dropZone.addEventListener('drop', handleFileSelect, false);
 	gGraph = new GraphicGraph('graph');
 	gGraph.init();
+	jsonformater=new jSonFormatter(gGraph);
 	gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
 	gGraph.addNode(["region"],["reg2"],["n0"]);
@@ -42,10 +47,13 @@ window.onload = function () {
 
 var loadJson = function(){
 	var data="data.json"; 
-	var yep=true;
-	var file=document.getElementById("import_f").value;
+	var file=document.getElementById("import_f").files[0];
 	if(typeof(file)!="undefined" && file !=null && file !="") data=file;
 	else alert("No input file. Default datas loaded !");
+	loadFile(data);
+}
+var loadFile = function(data){
+	var yep=true;
 	if(gGraph==null || !confirm('Merge with the existing graph ?')){
 		yep=confirm("confirm the removal of the old graph ?");
 		if(yep){
@@ -59,9 +67,29 @@ var loadJson = function(){
 		if(jsonformater==null)
 			jsonformater=new jSonFormatter(gGraph);
 		console.log("importing datas");
-		jsonformater.init(data);
+		var ka = new FileReader();
+		ka.readAsDataURL(data);
+		ka.onloadend = function(e){
+			jsonformater.init(e.target.result);
+		}	
 	}
 };
+
+var handleFileSelect = function(evt) {
+	evt.stopPropagation();
+	evt.preventDefault();
+    var files = evt.dataTransfer.files;
+	loadFile(files[0]);
+};
+function handleDragOver(evt) {
+    evt.stopPropagation();
+    evt.preventDefault();
+    evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
+};
+    
+
+
+
 </script>
  
 
@@ -72,7 +100,7 @@ var loadJson = function(){
 	<Form id="menu_f">
 	  <input type="file" id="import_f" value="data.json">
 	  <input type="button" id="import" value="Import Data" onclick="loadJson()">
-	  <input type="button" id="export" value="Export Data">
+	  <input type="button" id="export" value="Export Data" onclick="jsonformater.outputJs()">
 	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
 	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
 	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
