--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Executable Knowledge</title>
+<title>KaMi (Knowledge aggregator & Model instantiator)</title>
 <meta charset="utf-8">
 <meta name="Executable Knowledge" content="This tool is a graphical interface for knowledge representation and edition">
 <meta name="keywords" content="Kappa,knowledge representation">
@@ -10,111 +10,39 @@
 <link rel="stylesheet" type="text/css" href="kr.css">
 <script src="d3/d3.min.js"></script>
 <script src="d3/d3-context-menu.js"></script>
-<script src="LayeredGraph.js"></script>
-<script src="DynamicGraph.js"></script>
-<script src="GraphicGraph.js"></script>
-<script src="jSonFormatter.js"></script>
+<script src="Kami.js"></script>
 <script>
-var gGraph = null; 
-var jsonformater= null;
-window.onload = function () { 
-	var dropZone = document.getElementById('graph');
-    dropZone.addEventListener('dragover', handleDragOver, false);
-    dropZone.addEventListener('drop', handleFileSelect, false);
-	gGraph = new GraphicGraph('graph');
-	gGraph.init();
-	jsonformater=new jSonFormatter(gGraph);
-	gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
-	gGraph.addNode(["region"],["reg1"],["n0"]);
-	gGraph.addNode(["region"],["reg2"],["n0"]);
-	gGraph.addNode(["action","bnd"],["bnd1"],[]);
-	gGraph.addNode(["action","bnd"],["bnd2"],[]);
-	gGraph.addNode(["action","binder","left"],[],["n3"]);
-	gGraph.addNode(["action","binder","right"],[],["n3"]);
-	gGraph.addNode(["action","binder","left"],[],["n4"]);
-	gGraph.addNode(["action","binder","right"],[],["n4"]);
-	gGraph.addEdge("n1","n5");
-	gGraph.addEdge("n1","n6");
-	gGraph.addEdge("n2","n7");
-	gGraph.addEdge("n2","n8");
-	gGraph.addCtx("n3",["n1"]);
-	gGraph.addCtx("n4",["n2","n3"]);
-	gGraph.wakeUp();
-	//gGraph.mergeNode("n0","n1");
-	//console.log(gGraph.findByName(["brk1"],["action","bnd"],[]));
+	var showtime = new Kami("body");
+	var lg= new LayerGraph();
+	var st=new UndoRedoStack();
+	st.stack(lg.addNode(['component','agent'],['ng_0'],['ag1']));
+	st.stack(lg.addNode(['component','agent'],['ng_0'],['ag1']));
+	st.stack(lg.addNode(['component','agent'],['ng_1'],['ag2']));
+	st.stack(lg.addNode(['component','flag'],['ng_0'],['fl1']));
+	st.stack(lg.addNode(['component','flag'],['ng_1'],['fl1']));
+	st.stack(lg.addNode(['component','region'],['ng_1'],['reg1']));
+	st.stack(lg.addNode(['action','bnd'],['ng_0'],['bnd1']));
+	st.stack(lg.addEdge('parent',['ng_0'],'n_3','n_0'));
+	st.stack(lg.addEdge('link',['ng_0'],'n_0','n_6'));
+	st.stack(lg.addEdge('link',['ng_0'],'n_1','n_6'));
+	st.stack(lg.addEdge('parent',['ng_1'],'n_4','n_2'));
+	st.stack(lg.addEdge('parent',['ng_1'],'n_5','n_2'));
+	lg.log();
+	st.log();
+	console.log(st.undo());
+	console.log(st.localUndo('ng_0'));
+	console.log(st.localUndo('ng_0'));
+	//st.stack(lg.addEdge('parent',['ng_0'],'n_5','n_1'));
+	//console.log(st.redo());
+	//console.log(st.localRedo('ng_1'));
+	st.clearLocal('ng_0');
+	st.log();
+	console.log("ng_100".split('_')[1]);
+
+	console.log(parseInt("ng_100".split('_')[1])<parseInt("ng_11".split('_')[1]));
 	
-};
-
-var loadJson = function(){
-	var data=null; 
-	var file=document.getElementById("import_f").files[0];
-	if(typeof(file)!="undefined" && file !=null && file !="") data=file;
-	else alert("No input file. Default datas loaded !");
-	loadFile(data);
-}
-var loadFile = function(data){
-	var yep=true;
-	if(gGraph==null || !confirm('Merge with the existing graph ?')){
-		yep=confirm("confirm the removal of the old graph ?");
-		if(yep){
-			d3.select("#graph").selectAll('*').remove();
-			delete(gGraph);
-			gGraph = new GraphicGraph('graph');
-			gGraph.init();	
-			jsonformater=new jSonFormatter(gGraph);
-		}else return;
-	}if(yep){
-		if(jsonformater==null)
-			jsonformater=new jSonFormatter(gGraph);
-		console.log("importing datas");
-		if(data!=null){
-			var ka = new FileReader();
-			ka.readAsDataURL(data);
-			ka.onloadend = function(e){
-				jsonformater.init(e.target.result);
-			}
-		}else jsonformater.init("data.json");
-	}
-};
-
-var handleFileSelect = function(evt) {
-	evt.stopPropagation();
-	evt.preventDefault();
-    var files = evt.dataTransfer.files;
-	loadFile(files[0]);
-};
-function handleDragOver(evt) {
-    evt.stopPropagation();
-    evt.preventDefault();
-    evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
-};
-    
-
-
-
 </script>
- 
-
 </head> 
 <body>
-<div id="main-container">
-      <div id="menu">
-	<Form id="menu_f">
-	  <input type="file" id="import_f" value="data.json">
-	  <input type="button" id="import" value="Import Data" onclick="loadJson()">
-	  <input type="button" id="export" value="Export Data" onclick="jsonformater.outputJs()">
-	  <input type="button" id="kr" value="view Kr"  onclick="gGraph.setState('kr_view')">
-	  <input type="button" id="edit" value="Edit Kr" onclick="gGraph.setState('kr_edit')">
-	  <input type="button" id="nugget" value="Add Nugget" onclick="gGraph.setState('nugget_view')">
-	  <input type="button" id="update" value="Update" onclick="gGraph.save()">
-	  <input type="button" id="lcg" value="LCG" onclick="gGraph.setState('lcg_view')">
-	  <input type="button" id="kappa" value="To Kappa" onclick="gGraph.setState('kappa_view')">
-	  <input type="button" id="undo" value="Undo" onclick="gGraph.unStack()">
-	  <input type="button" id="replay" value="Reset Graph position" onclick="gGraph.wakeUp()">
-	</form>
-      </div>
-      <div id="graph">
-      </div>
-    </div>
 </body>
 </html>
