--- a/index.html
+++ b/index.html
@@ -14,32 +14,49 @@
 <script>
 	var showtime = new Kami("body");
 	var lg= new LayerGraph();
-	var st=new UndoRedoStack();
-	st.stack(lg.addNode(['component','agent'],['ng_0'],['ag1']));
-	st.stack(lg.addNode(['component','agent'],['ng_0'],['ag1']));
-	st.stack(lg.addNode(['component','agent'],['ng_1'],['ag2']));
-	st.stack(lg.addNode(['component','flag'],['ng_0'],['fl1']));
-	st.stack(lg.addNode(['component','flag'],['ng_1'],['fl1']));
-	st.stack(lg.addNode(['component','region'],['ng_1'],['reg1']));
-	st.stack(lg.addNode(['action','bnd'],['ng_0'],['bnd1']));
-	st.stack(lg.addEdge('parent',['ng_0'],'n_3','n_0'));
-	st.stack(lg.addEdge('link',['ng_0'],'n_0','n_6'));
-	st.stack(lg.addEdge('link',['ng_0'],'n_1','n_6'));
-	st.stack(lg.addEdge('parent',['ng_1'],'n_4','n_2'));
-	st.stack(lg.addEdge('parent',['ng_1'],'n_5','n_2'));
+	lg.addNode(['component','agent'],['ng_0'],['ag1']);
+	lg.addNode(['component','agent'],['ng_0'],['ag1']);
+	lg.addNode(['component','agent'],['ng_1'],['ag2']);
+	lg.addNode(['component','flag'],['ng_0'],['fl1']);
+	lg.addNode(['component','flag'],['ng_1'],['fl1']);
+	lg.addNode(['component','region'],['ng_1'],['reg1']);
+	lg.addNode(['action','bnd'],['ng_0'],['bnd1']);
+	lg.addEdge('parent',['ng_0'],'n_3','n_0');
+	lg.addEdge('link',['ng_0'],'n_0','n_6');
+	lg.addEdge('link',['ng_0'],'n_1','n_6');
+	lg.addEdge('parent',['ng_1'],'n_4','n_2');
+	lg.addEdge('parent',['ng_1'],'n_5','n_2');
 	lg.log();
-	st.log();
-	console.log(st.undo());
-	console.log(st.localUndo('ng_0'));
-	console.log(st.localUndo('ng_0'));
+	lg.logStack();
+	//lg.undo();
+	//lg.localUndo('ng_0');
+	//lg.log();
+	//lg.localUndo('ng_0');
+	//lg.log();
+    lg.undoNugget('ng_0');
 	//st.stack(lg.addEdge('parent',['ng_0'],'n_5','n_1'));
 	//console.log(st.redo());
 	//console.log(st.localRedo('ng_1'));
-	st.clearLocal('ng_0');
-	st.log();
-	console.log("ng_100".split('_')[1]);
+	//lg.clearLocal('ng_0');
+	lg.log();
+    lg.logStack();
+    lg.redoNugget('ng_0');
+    lg.log();
+    lg.logStack();
+    var rel = new Relation();
+    rel.addR(['n1','n2'],['n3','n4','n5']);
+    rel.log();
+    rel.addR(['n6'],['n7','n8','n5']);
+    rel.log();
+    rel.addR(['n1','n2'],['n9']);
+    rel.log();
+    rel.rmAnt('n1');
+    rel.log();
+    rel.rmIm('n5');
+    rel.log();
+    rel.rmR(['n1','n2'],['n3','n5']);
+    rel.log();
 
-	console.log(parseInt("ng_100".split('_')[1])<parseInt("ng_11".split('_')[1]));
 	
 </script>
 </head> 
