--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     rel.log();
     rel.rmR(['n1','n2'],['n3','n5']);
     rel.log();
+    console.log("mod(y->t)".split(/\(|\)/));
 
 	
 </script>
