--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         kami.addNode(["component","agent"],[],["test"],[],"u_0");
         kami.addNode(["component","agent"],[],["test"],[],"u_1");
         kami.addNode(["component","agent"],[],["test2"],[],"u_3");
-        showtime = new KamiGui(kami,null);
+        showtime = new KamiGui(null);
         showtime.init();
     }
 </script>
