--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
 <meta name="author" content="Adrien Basso-Blandin">
 <meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" type="text/css" href="kami.css">
-<script src="d3/d3.min.js"></script>
+<script src="d3/d3.js"></script>
 <script src="d3/d3-context-menu.js"></script>
 <script src="Kami.js"></script>
-<script src="KamiGui.js"></script>
 <script>
-	var showtime;
     var kami;
     window.onload = function () {
         kami = new Kami();
-        kami.addNode(["component","agent"],[],["test"],[],"u_0");
-        kami.addNode(["component","agent"],[],["test"],[],"u_1");
-        kami.addNode(["component","agent"],[],["test2"],[],"u_3");
-        showtime = new KamiGui(null);
-        showtime.init();
+		console.log("Kami initialized :)");
+		console.log(kami.addNugget("my nugget","first test nugget of the world !"));
+		console.log("===============");
+		console.log(kami.addNode(["component","agent"],"ng_0",["test","re_test"],null,"u_0"));
+		console.log("===============");
+		console.log(kami.addNode(["component","agent"],"ng_0",["re_test","test2"],null,"u_0"));
+		console.log("===============");
+		console.log(kami.addNode(["component","agent"],"ng_0",["bla"],null,"u_1"));
+		console.log("===============");
+		console.log(kami.rmNode("n_0"));
+		console.log("===============");
+		console.log(kami.setMainNode("ng_0",["n_1"]));
+		console.log("===============");
+		console.log(kami.addNodeLabels("n_0",["blabla"],"ACG"));
+		console.log("===============");
+		console.log(kami.rmNodeLabels("n_1",[]));
+		console.log("===============");
+		kami.log();
     }
 </script>
 </head> 
