--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
 		console.log("===============");
 		console.log(kami.addNode(["component","agent"],"ng_0",["bla"],null,"u_1"));
 		console.log("===============");
-		console.log(kami.rmNode("n_0"));
+		//console.log(kami.rmNode("n_0","NGG"));
 		console.log("===============");
 		console.log(kami.setMainNode("ng_0",["n_1"]));
 		console.log("===============");
-		console.log(kami.addNodeLabels("n_0",["blabla"],"ACG"));
-		console.log("===============");
-		console.log(kami.rmNodeLabels("n_1",[]));
+		console.log(kami.rmNodeLabels("n_0",["re_test"],"ACG"));
 		console.log("===============");
 		kami.log();
     }
