working on LCG algorithm optimisation

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		console.log("===============");
 		console.log(kami.hideNugget("ng_0"));
 		console.log("===============");
+		console.log(kami.showNugget("ng_0"));
+		console.log("===============");
 		kami.log();
     }
 </script>
