--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ window.onload = function () {
 	var dropZone = document.getElementById('graph');
     dropZone.addEventListener('dragover', handleDragOver, false);
     dropZone.addEventListener('drop', handleFileSelect, false);
-	gGraph = null;//new GraphicGraph('graph');
-	//gGraph.init();
+	gGraph =new GraphicGraph('graph');
+	gGraph.init();
 	//jsonformater=new jSonFormatter(gGraph);
 	/*gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
