--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ window.onload = function () {
 	var dropZone = document.getElementById('graph');
     dropZone.addEventListener('dragover', handleDragOver, false);
     dropZone.addEventListener('drop', handleFileSelect, false);
-	gGraph = null;//new GraphicGraph('graph');
-	//gGraph.init();
-	//jsonformater=new jSonFormatter(gGraph);
+	gGraph = new GraphicGraph('graph');
+	gGraph.init();
+	jsonformater=new jSonFormatter(gGraph);
 	/*gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
 	gGraph.addNode(["region"],["reg2"],["n0"]);
