--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ window.onload = function () {
     dropZone.addEventListener('drop', handleFileSelect, false);
 	gGraph =new GraphicGraph('graph');
 	gGraph.init();
-	//jsonformater=new jSonFormatter(gGraph);
+	jsonformater=new jSonFormatter(gGraph);
 	/*gGraph.addNode(["agent"],["ag1","EGFR","thirdname"],[]);
 	gGraph.addNode(["region"],["reg1"],["n0"]);
 	gGraph.addNode(["region"],["reg2"],["n0"]);
